Added comments and mades some changes

--- a/cutom_theme.css
+++ b/cutom_theme.css
@@ -67,7 +67,7 @@ details > ul {
     margin-bottom: 0;
 }
   
-  /////////////////////////////////////////
+  /* ///////////////////////////////////////// */
   
 body {
     background: #222;
