--- a/cutom_theme.css
+++ b/cutom_theme.css
@@ -6,7 +6,8 @@
     font-size: 1.0em;
     /* Round the edges */
     border-radius: 8px;
-    padding: 6px 12px;
+    padding: 10px 10px;
+    text-align: center;
     /* Change cursor on hover */
     cursor: pointer;
 }
@@ -70,10 +71,10 @@ details > ul {
   /* ///////////////////////////////////////// */
   
 body {
-    background: #222;
+    background: rgb(255, 255, 255);
     height: 100vh;
     font-family: sans-serif;
-    color: white;
+    color: rgb(59, 59, 59);
     line-height: 1.5;
     letter-spacing: 1px;
     margin-top: 2rem;
